--- a/index.html
+++ b/index.html
@@ -5,60 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Harold Espinoza">
     <title>Reproductor 3 Tiempos</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="harold.css">
+    <link rel="stylesheet" href="./harold.css">
 </head>
 <body>
     <div class="turntable">
         <div class="turntable-disk"></div>
         <img src="./img/turntable-arm.svg" alt="turntable-arm" class="turntable-arm">
-    </div>
+        <div class="turntable-controls">
+            <p class="turntable-controls__songinfo">
+                <span class="controls__songinfo-author">-</span>
+                /
+                <span class="controls__songinfo-songname">-</span>
+            </p>
 
-    <div id="player">
-        <div id="progress">
-            <div class="time" id="timeT">
-                <span>00<span class='slash'>:</span>00</span>
-            </div>
-            <div id="sl1" class='slash'>/</div>
-            <div class="time" id="timeR">
-                <span>00<span class='slash'>:</span>00</span>
-            </div>
-            <div id="sl2" class='slash'>/</div>
-            <div class="time" id="timeTt">
-                <span>00<span class='slash'>:</span>00</span>
-            </div>
-        </div>
-        <div id="controlPlayer">
-            <div id="nextPrev">
-                <div id="prev">
-                    <img src="img/ANTES.png" alt="">
-                </div>
-                <div id="playPause">
-                    <img src="img/PAUSA.png" alt="">
-                </div>
-                <div id="next">
-                    <img src="img/DESPUES.png" alt="">
-                </div>
-            </div>
-            <div id="controlSong">
-                <div class="inputDiv i1"></div>
-                <div class="inputDiv i2"></div>
-                <div id="volPorcent">
-                    100%
-                </div>
-            </div>
-        </div>
-        <div id="controlVolume">
-            <input id="vol-tuner" value="100" min="0" max="100" step="1">
-            <!--<div id="over">
-                <div id="point">
+            <div class="controls__songprogress" time-current="00:00" time-end="00:00"></div>
 
-                </div>
+            <div class="controls__buttonscontrols">
+                <button class="control_btn btn_prev"></button>
+                <button class="control_btn btn_play"></button>
+                <button class="control_btn btn_next"></button>
             </div>
-            -->
+            
+            <div class="controls__volume">
+                <span class="volume-value">100%</span>
+                <input type="range" class="volumeControl" id="volumeControl" min="0" max="1" value="1" step="0.01">
+            </div>
         </div>
     </div>
 
-    <script src="./main.js"></script>
+
+    <!--<script src="./main.js"></script>-->
 </body>
 </html>
