Agregado diseño de los discos 1 y 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="turntable">
         <h1 class="turntable-name">oregon</h1>
-        <div id="disk" class="turntable-disk"></div>
+        <div id="disk" class="turntable-disk disk2"></div>
         <img id="arm" class="turntable-arm" src="./img/brazo1.png" alt="">
 
         <div class="turntable-controls">
