Añadidos dos tipos de brazos diferentes para el tocadiscos y los diferentes estilos de los discos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="turntable">
         <h1 class="turntable-name">oregon</h1>
-        <div id="disk" class="turntable-disk disk2"></div>
-        <img id="arm" class="turntable-arm" src="./img/brazo1.png" alt="">
+        <div id="disk" class="turntable-disk disk1"></div>
+        <div id="arm" class="turntable-arm arm1"></div>
 
         <div class="turntable-controls">
             <button id="btn-start" class="control_btn btn_play"></button>
