--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div id="arm" class="turntable-arm arm1"></div>
 
         <div class="turntable-controls">
-            <button id="btn-start" class="control_btn btn_play"></button>
+            <button id="btn-start" class="control_btn btn_play" title="Iniciar/Pausar"></button>
             <div class="volume_bar">
-                <button class="control_btn btn_volume">80 %</button>
-                <input type="range" class="volumeControl" id="volumeControl" min="0" max="1" value="1" step="0.01">
+                <button class="control_btn btn_volume" title="Volumen">80 %</button>
+                <input type="range" class="volume_control" id="volumeControl" min="0" max="1" value="1" step="0.01">
             </div>
-            <button id="btn-stop" class="control_btn btn_stop"></button>
+            <button id="btn-stop" class="control_btn btn_stop" title="Detener"></button>
         </div>
 
-        <p class="turntable-time">
-            <span class="turntable-time__current">00:00</span>
-            <span class="turntable-time__separator"> / </span>
-            <span class="turntable-time__last">00:00</span>
-        </p>
+        <div class="turntable-time">
+            <p class="turntable-time__current">00:00</p>
+            <p class="turntable-time__separator" style="color: #e30052"> / </p>
+            <p class="turntable-time__last">00:00</p>
+        </div>
     </div>
 
     <script>
