--- a/index.html
+++ b/index.html
@@ -10,54 +10,25 @@
 <body>
     <div class="turntable">
         <h1 class="turntable-name">oregon</h1>
-        <div id="disk" class="turntable-disk disk1"></div>
-        <div id="arm" class="turntable-arm arm1"></div>
+        <div id="disk" class="turntable-disk"></div>
+        <div id="arm" class="turntable-arm"></div>
 
         <div class="turntable-controls">
             <button id="btn-start" class="control_btn btn_play" title="Iniciar/Pausar"></button>
             <div class="volume_bar">
-                <button class="control_btn btn_volume" title="Volumen">80 %</button>
-                <input type="range" class="volume_control" id="volumeControl" min="0" max="1" value="1" step="0.01">
+                <button id="volume-indicator" class="control_btn btn_volume" title="Volumen">100 %</button>
+                <input type="range" class="volume_control" id="volume-control" min="0" max="1" value="1" step="0.01">
             </div>
             <button id="btn-stop" class="control_btn btn_stop" title="Detener"></button>
         </div>
 
         <div class="turntable-time">
-            <p class="turntable-time__current">00:00</p>
+            <p id="current-time" class="turntable-time__current">00:00</p>
             <p class="turntable-time__separator" style="color: #e30052"> / </p>
-            <p class="turntable-time__last">00:00</p>
+            <p id="last-time" class="turntable-time__last">00:00</p>
         </div>
     </div>
 
-    <script>
-        let disk = document.getElementById("disk"),
-            arm = document.getElementById("arm"),
-            btnStart = document.getElementById("btn-start"),
-            btnStop = document.getElementById("btn-stop");
-
-        btnStart.addEventListener("click", function(e){
-            if(btnStart.classList.contains("to_pause")){
-                btnStart.classList.remove("to_pause");
-                disk.style.animationPlayState = "paused";
-                arm.style.animationPlayState = "paused";
-            }else{
-                btnStart.classList.add("to_pause");
-                disk.classList.add("active");
-                arm.classList.add("active");
-                disk.style.animationPlayState = "running";
-                arm.style.animationPlayState = "running";
-            }
-        });
-
-        btnStop.addEventListener("click", function(){
-            btnStart.classList.remove("to_pause");
-            disk.classList.remove("active");
-            arm.classList.remove("active");
-        });
-
-    </script>
-
-
-    <!--<script src="./main.js"></script>-->
+    <script src="./main.js"></script>
 </body>
 </html>
