Añadido el salto de las canciones en modo playlist del tocadiscos. Se añadio la funcionabilidad del mostrar el tiempo transcurrido durante cada canción

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
 
         <div class="turntable-time">
-            <p id="current-time" class="turntable-time__current">00:00</p>
+            <p id="current-time" class="turntable-time__current">00<span style='color: yellow'>:</span>00</p>
             <p class="turntable-time__separator" style="color: #e30052"> / </p>
-            <p id="last-time" class="turntable-time__last">00:00</p>
+            <p id="last-time" class="turntable-time__last">00<span style='color: yellow'>:</span>00</p>
         </div>
     </div>
 
