Completada Correción 4: Simplificación del objeto de configuración

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
         <div class="turntable-controls">
             <button id="btn-start" class="control_btn btn_play" title="Iniciar/Pausar"></button>
-            <div class="volume_bar">
-                <button id="volume-indicator" class="control_btn btn_volume" title="Volumen">100 %</button>
-                <input type="range" class="volume_control" id="volume-control" min="0" max="1" value="1" step="0.01">
-            </div>
+            <button id="progress-indicator" class="control_btn btn_progress" title="Progreso Pista">0 %</button>
             <button id="btn-stop" class="control_btn btn_stop" title="Detener"></button>
         </div>
 
