Habilitado: mostrar tiempo total de reproduccion de la playlist

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id="arm" class="turntable-arm"></div>
 
         <div class="turntable-controls">
-            <button id="btn-start" class="control_btn btn_play" title="Iniciar/Pausar"></button>
-            <button id="progress-indicator" class="control_btn btn_progress" title="Progreso Pista">0 %</button>
-            <button id="btn-stop" class="control_btn btn_stop" title="Detener"></button>
+            <button disabled id="btn-start" class="control_btn btn_play" title="Iniciar/Pausar"></button>
+            <button disabled id="progress-indicator" class="control_btn btn_progress" title="Progreso Pista">0 %</button>
+            <button disabled id="btn-stop" class="control_btn btn_stop" title="Detener"></button>
         </div>
 
         <div class="turntable-time">
